blockml/test/errors/02_field/e23/e23.view
view: e23
table: 1
fields:
- dimension: a            
  measure: b              
  calculation: c          
  time: d                 
  filter: e               

